--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.0.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
+    "express-ejs-layouts": "^2.5.1",
     "serverless-http": "^3.2.0",
-    "@netlify/functions": "^2.0.0"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
